--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
     </label><br><br>
   
 
-    <button type="submit" value="Submit Admission Form" >Submit Admission Form</button><br><br>
-    <button type="reset" value="Reset Form" >Reset</button>
+    <button type="submit" value="submit" >Submit</button><br><br>
+    <button type="reset" value="reset" >Reset</button>
 
 
     </form><br>
